# fastapi-mcp-template

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  run_api_server.py  run_docker.py  run_mcp_server.py  run_server.py  setup_template.py
.cursor/rules/: fastapi-mcp-development-rules.mdc
.template_backup/: Dockerfile  README.md  metadata.json  run_api_server.py
.template_backup/.cursor/: mcp.json
.template_backup/examples/: api_usage.py
.template_backup/src/core/: models.py
.template_backup/tests/: test_api.py
docs/: TEMPLATE_GUIDE.md
src/: __init__.py
src/api/: __init__.py  app.py
src/api/routers/: __init__.py  health.py  items.py  users.py
src/core/: __init__.py  config.py  database.py  dependencies.py  exceptions.py  logging.py
src/mcp_server/: __init__.py  resources.py  server.py
src/templates/: __init__.py
tests/: test_integration.py  test_mcp.py
